<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_calendar"
        android:title="@string/calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_progress"
        android:title="@string/progress"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_coach"
        android:title="@string/coach"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>