<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="18dp" android:background="@color/background">
    <TextView android:text="@string/social_feed" android:textStyle="bold" android:textSize="26sp" android:textColor="@color/text_dark" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView android:text="@string/feed_subtitle" android:textColor="@color/text_muted" android:layout_marginTop="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/newPostButton" android:layout_width="match_parent" android:layout_height="54dp" android:layout_marginTop="14dp" android:text="@string/new_post_plus" />
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/feedRecycler" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:layout_marginTop="12dp"/>
</LinearLayout>
