<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="18dp" android:background="@color/background">
    <TextView android:text="@string/calendar" android:textStyle="bold" android:textSize="26sp" android:textColor="@color/text_dark" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <CalendarView android:id="@+id/calendarView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp"/>
    <TextView android:id="@+id/dayTitleText" android:text="@string/calendar_day_workouts" android:textStyle="bold" android:textSize="18sp" android:layout_marginTop="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/addWorkoutSelectedDayButton" android:layout_width="match_parent" android:layout_height="52dp" android:layout_marginTop="12dp" android:backgroundTint="#0F172A" android:text="@string/add_workout_day" android:textAllCaps="false" android:textColor="#FFFFFF" android:textSize="15sp" android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/dayWorkoutsRecycler" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:layout_marginTop="8dp"/>
</LinearLayout>
